src/objects/B2B_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>B2B_Order_Line_Error_Messages__c</fullName>
        <label>B2B Order Line Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Line_Status__c</fullName>
        <label>B2B Order Line Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Line__c</fullName>
        <label>B2B Order Line</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order__c</fullName>
        <label>B2B Order</label>
        <referenceTo>B2B_Order__c</referenceTo>
        <relationshipLabel>B2B Order Lines</relationshipLabel>
        <relationshipName>B2B_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>B2B_Partner_Purchase_Order__c</fullName>
        <label>B2B Partner Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Quote_Line__c</fullName>
        <label>B2B Quote Line</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NMBL_Quote_Line_ID__c</fullName>
        <label>NMBL Quote Line ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Quantity__c   * Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>B2B Order Line</label>
    <nameField>
        <displayFormat>BOLN-{00000000}</displayFormat>
        <label>B2B Order Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>